# Ray-Field-Polygonization

./: .gitignore  .gitmodules  README.md  chamfer_data.csv  convex_hull_test.py  filter_test.py  main.py  marching_test.py  model_timer.py  n_points_plot.py  parameter_plot.py  poisson_depth_plot.py  pyproject.toml  ray_field.py  requirements.txt  shrinkwrap_test.py  steps_viz.py  test.py  timer.py  utils.py
analysis/: __init__.py  chamfer.py  chamfer_combined.py  chamfer_dist.py  chamfer_marf.py  chamfer_marf_to_stanford.py  chamfer_time.py  depth.py  dist_deviation.py  equidistant_points.py  filter_combined.py  filter_dist.py  filter_time.py  hausdorff.py  hausdorff_dist.py  hit_rate.py  nearest_neighbor.py  old_combined.py  old_time.py  optimize.py  optimize_angle.py  optimize_angle_time.py  optimize_prescan.py  optimize_radii.py  optimize_ray.py  optimize_targeted.py  radius.py  rays_n.py  steps_viz.py  surface_area.py  time.py  time_chamfer.py  time_deviation.py  time_hausdorff.py  time_n.py  time_object.py  time_steps.py  visual.py
analysis/data/: chamfer_angle_filter.csv  chamfer_ball_pivoting.csv  chamfer_baseline.csv  chamfer_baseline_device.csv  chamfer_candidate_sphere.csv  (+26 more)
data/: suzanne_data.csv
old/: ray_field.py  steps_viz.py  utils.py
ray_field/: Algorithm.py  Baseline.py  BaselineDevice.py  PrescanCone.py  __init__.py  algorithm.py  algorithms.py  angle_filter.py  ball_pivoting.py  baseline.py  baseline_cpu.py  baseline_device.py  candidate_sphere.py  convex_hull.py  laptop_utils.py  prescan_cone.py  shrinkwrap.py  utils.py
src/: main.py  utils.py
(+157 files in other folders)
